--- a/SURGE_iOS/MainStoryBoard.storyboard
+++ b/SURGE_iOS/MainStoryBoard.storyboard
@@ -143,7 +143,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     </navigationBar>
                     <connections>
-                        <segue id="1947" destination="97" kind="relationship" relationship="rootViewController"/>
+                        <segue id="2093" destination="2073" kind="relationship" relationship="rootViewController"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="338" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -216,10 +216,46 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem title="Title" id="2061" key="navigationItem"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1596" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1216" y="778"/>
+        </scene>
+        <scene sceneID="2072">
+            <objects>
+                <viewController id="2073" sceneMemberID="viewController" customClass="HomeViewController" title="Home View" useStoryboardIdentifierAsRestorationIdentifier="YES" storyboardIdentifier="HomeViewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2070"/>
+                        <viewControllerLayoutGuide type="bottom" id="2071"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2074">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem title="Title" id="2092" key="navigationItem"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2075" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="656" y="415"/>
+        </scene>
+        <scene sceneID="2110">
+            <objects>
+                <viewController id="2111" sceneMemberID="viewController" customClass="TaskDetailsViewController" storyboardIdentifier="TaskDetailsViewController" title="Task Details">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2108"/>
+                        <viewControllerLayoutGuide type="bottom" id="2109"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2112">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2113" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3946" y="35"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -232,5 +268,6 @@
         <image name="account_and_control_w.png" width="128" height="128"/>
         <image name="ProfileDefault.png" width="128" height="128"/>
         <image name="ProfilePic.jpg" width="128" height="128"/>
+        <image name="SurgeLaunch.png" width="708" height="714"/>
     </resources>
 </document>
