--- a/SURGE_iOS/MainStoryBoard.storyboard
+++ b/SURGE_iOS/MainStoryBoard.storyboard
@@ -21,6 +21,8 @@
                     <connections>
                     </connections>
                     <navigationItem title="Title" id="384" key="navigationItem"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="2496"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -143,12 +145,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     </navigationBar>
                     <connections>
-                        <segue id="2169" destination="2073" kind="relationship" relationship="rootViewController"/>
+                        <segue id="2321" destination="2073" kind="relationship" relationship="rootViewController"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="338" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="115" y="426"/>
+            <point key="canvasLocation" x="162" y="446"/>
         </scene>
         <scene sceneID="1224">
             <objects>
@@ -199,6 +201,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem title="Title" id="1614" key="navigationItem"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="2239"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1589" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -217,6 +221,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem title="Title" id="2061" key="navigationItem"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="2444"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1596" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -235,10 +241,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem title="Title" id="2092" key="navigationItem"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="2261"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2075" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="656" y="415"/>
+            <point key="canvasLocation" x="660" y="449"/>
         </scene>
         <scene sceneID="2110">
             <objects>
